# faretek1.github.io

./: .gitignore  404.html  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  giscus.json  hooks.py  index.html  mkdocs.yml  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: documentation-issue-template.md
.github/workflows/: ci.yml
.well-known/: atproto-did  discord
.well-known/atproto-did/: index.html
API/: index.html
API/sb2gs/: index.html
LoaTer/: index.html
areseven/: index.html
authors/: index.html
blog/: index.html
blog/archive/2020/: index.html
blog/archive/2025/: index.html
blog/archive/2026/: index.html
blog/category/areseven/: index.html
blog/category/faretek1/: index.html
blog/category/gisucs/: index.html
blog/category/hello/: index.html
blog/category/retek/: index.html
blog/category/scratch/: index.html
blog/category/world/: index.html
blog/page/2/: index.html
docs/: hooks.py  index.md
docs/API/: index.md  sb2gs.md
docs/LoaTer/: index.md
docs/areseven/: index.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: 20260102.md  20260103rtk.md  Who is Toaster.md  about-me-blogger.md  aboutme-blogger.md  areseven-Quickdraw resolve.md  base.md  (+15 more)
docs/retek/: index.md  mkblog.md  projects.md
docs/stylesheets/: author-areseven.css
mkblog/: pyproject.toml
mkblog/src/: main.py
overrides/: main.html
overrides/partials/: comments.html  logo.html
retek/: index.html
retek/mkblog/: index.html
retek/projects/: index.html
search/: search_index.json
(+21 files in other folders)
